@@ -1,5 +1,6 @@
 This file lists major, incompatible or otherwise important changes, you should look at it after every update.
 
+2014-10-29 The sender for emails now has to be configured (config key is "email_from")
 2014-10-19 Postgresl support
 2014-09-20 All PHP errors are now converted to exceptions and execution
            terminates if they are not caught. This also works properly
